--- a/css/related.css
+++ b/css/related.css
@@ -44,6 +44,10 @@
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 769px){
+    #container .related {
+        height: 370px;
+        margin-top: -40px;
+    }
     #container .related ul {
         max-width: 800px;
         padding: 20px 0px 120px 0px;
