--- a/css/style.css
+++ b/css/style.css
@@ -236,21 +236,17 @@ body {
         font-size: 16px;
         padding: 15px;
     }
-    #container .vr, #container .vr2 {
-        min-width: 960px;
-    }
     #container .vr .fig01 {
         background-image: url(../images/fig_01_tab.png);
         background-repeat: no-repeat;
+        width: 380px;
         height: 282px;
-        margin-left: 80px;
     }
     #container .vr2 .fig02 {
         background-image: url(../images/fig_02_tab.png);
         background-repeat: no-repeat;
         background-position: right;
         height: 300px;
-        margin-right: 120px;
     }
     #container .vr .fig03 {
         background-image: url(../images/fig_03_tab.png);
@@ -259,26 +255,29 @@ body {
         height: 282px;
     }
     #container .vr{
-        width: 100%;
+        width: 80%;
         margin: auto;
         margin-top: 120px;
     }
      #container .vr2{
+        width: 80%;
+        margin: auto;
         padding-top: 40px;
     }
     #container .vr .vr_01 {
-        max-width: 400px;
+        float: left;
+        max-width: 300px;
         position: relative;
         top: 30px;
-        float: right;
-        right: 10%;
+        left: 60%;
+        margin: auto;
     }
     #container .vr2 .vr_02 {
-        max-width: 400px;
+        max-width: 320px;
         position: relative;
         top: 70px;
         float: left;
-        left: 10%;
+        left: 5%;
     }
     #container .vr .vr_03 {
         max-width: 780px;
@@ -299,14 +298,17 @@ body {
         background-image: url(../images/vr_quote_tab.jpg);
         height: 281px;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
+        overflow: hidden;
     }
     #container .quote p{
         color: white;
-        font-size: 20px;
-        max-width: 500px;
-        top: 90px;
-        left: 20%;
+        font-size: 18px;
+        max-width: 350px;
+        top: 0px;
+        left: 0px;
+        margin-right:15%;
+        margin-top: 5%;
         font-family: 'Lato', sans-serif;
         word-spacing: 5px;
     }
@@ -319,6 +321,9 @@ body {
 }
 
 @media only screen and (max-width: 768px){
+    #container .head {
+        padding-top: 90px;
+    }
     #container .def{
         padding-top: 30px;
     }
@@ -373,9 +378,8 @@ body {
     }
     #container .vr2 .vr_02 {
         max-width: 700px;
-        position: relative;
         top: 0px;
-        left: 0px;
+        left: 0%;
         float: none;
         text-align: center;
         margin: 0px auto 30px;
